--- a/index.html
+++ b/index.html
@@ -7,27 +7,36 @@
     <body>
         <script type="text/javascript">
             window.onload = function() {
+    var desktopFallback = "https://youtu.be/",  // Base YouTube URL
+        mobileFallback = "https://youtu.be/",  // Base YouTube URL
+        app = "vnd.youtube://";  // Base YouTube app URL
 
-                var desktopFallback = "https://youtu.be/nZm9kicM9SY",
-                mobileFallback = "https://youtu.be/nZm9kicM9SY",
-                app = "vnd.youtube://nZm9kicM9SY";
+    // Extract the video ID from the URL query parameter
+    var urlParams = new URLSearchParams(window.location.search);
+    var videoID = urlParams.get('v');
 
-                if( /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ) {
-                    window.location = app;
-                    window.setTimeout(function() {
-                        window.location = mobileFallback;
-                    }, 25);
-                } else {
-                    window.location = desktopFallback;
-                }
+    if (videoID) {
+        desktopFallback += videoID;
+        mobileFallback += videoID;
+        app += videoID;
 
-                function killPopup() {
-                    window.removeEventListener('pagehide', killPopup);
-                }
+        if (/Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+            window.location = app;
+            window.setTimeout(function() {
+                window.location = mobileFallback;
+            }, 25);
+        } else {
+            window.location = desktopFallback;
+        }
+    }
+    
+    function killPopup() {
+        window.removeEventListener('pagehide', killPopup);
+    }
 
-                window.addEventListener('pagehide', killPopup);
-
-            };
+    window.addEventListener('pagehide', killPopup);
+};
+            
         </script>
     </body>
 </html>
